<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"

        android:orientation="vertical">

        <TextView
            android:id="@+id/logouttitle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginLeft="5dp"
            android:gravity="left"
            android:text="Saneforce"
            android:textColor="@color/white"
            android:textSize="20dp"></TextView>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/linear_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:background="@color/light_gray"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textmessge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="left"
            android:text="@string/logoutmsg"
            android:textColor="@color/Darkblueone"
            android:textSize="16dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="25dp"
            android:background="@color/light_gray"
            android:gravity="end"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/cancel"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginRight="40dp"
                android:gravity="center"
                android:text="@string/no"
                android:textColor="@color/red"
                android:textSize="16dp"

                />

            <TextView
                android:id="@+id/logout"
                android:layout_width="90dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginRight="20dp"
                android:background="@drawable/shapesignup"
                android:gravity="center"
                android:text="@string/yes"
                android:textColor="@color/white"
                android:textSize="16dp"


                />
        </LinearLayout>

    </LinearLayout>


</LinearLayout>