<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">


    <ScrollView

        android:id="@+id/scroll"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"

        android:layout_weight="1"
        android:background="@mipmap/appbg">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.github.siyamed.shapeimageview.CircularImageView

                android:id="@+id/profile_iconmyaccount"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:src="@mipmap/logo"
                app:siBorderColor="@color/leuf_blue"
                app:siBorderWidth="1dp" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/inputcontactperson"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/settingusername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:drawableLeft="@drawable/user_icon"
                    android:drawablePadding="7dp"
                    android:hint="@string/settingcontactpersonname"
                    android:imeOptions="actionNext"
                    android:padding="15dp"
                    android:textColor="@color/black"
                    android:textColorHighlight="@color/white"
                    android:textColorHint="@color/black"
                    android:textSize="13sp" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/inputname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/settingemail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:drawableLeft="@drawable/email_icon"
                    android:drawablePadding="7dp"
                    android:hint="@string/settingemail"
                    android:imeOptions="actionNext"
                    android:padding="15dp"
                    android:textColor="@color/black"
                    android:textColorHighlight="@color/white"
                    android:textColorHint="@color/black"
                    android:textSize="13sp" />
            </android.support.design.widget.TextInputLayout>
            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:focusableInTouchMode="false"
                android:progressDrawable="@drawable/circle_progress_bar"
                android:visibility="gone" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/inputmobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/settingmobilenumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:drawableLeft="@drawable/mobile_icon"
                    android:drawablePadding="7dp"
                    android:hint="@string/settingmobile"
                    android:imeOptions="actionNext"
                    android:padding="15dp"
                    android:textColor="@color/black"
                    android:textColorHighlight="@color/white"
                    android:textColorHint="@color/black"
                    android:textSize="13sp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/dob"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:drawableLeft="@drawable/dob_icon"
                    android:drawablePadding="7dp"
                    android:hint="@string/dateofbirth"
                    android:imeOptions="actionNext"

                    android:padding="15dp"
                    android:textColor="@color/black"

                    android:textColorHighlight="@color/white"
                    android:textColorHint="@color/black"
                    android:textSize="13sp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/inputdesignation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/settingaddress"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:drawableLeft="@drawable/address_icon"
                    android:drawablePadding="7dp"
                    android:hint="@string/settingAddress"
                    android:imeOptions="actionNext"

                    android:padding="15dp"
                    android:textColor="@color/black"

                    android:textColorHighlight="@color/white"
                    android:textColorHint="@color/black"
                    android:textSize="13sp" />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@color/colorPrimary"
        android:elevation="2dp"
        android:gravity="bottom"
        android:padding="10dp">


        <TextView
            android:id="@+id/Update"
            style="?android:attr/borderlessButtonStyle"

            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/savebuttonpadding"

            android:text="@string/settingUpdate"
            android:textColor="@color/white"
            android:textSize="@dimen/loginr_text_size"
            android:textStyle="bold" />
    </RelativeLayout>
</LinearLayout>
